<resources>
    <string name="app_name">TicTacToeXO</string>
    <string name="textView_title">Tic Tac Toe</string>
    <string name="textView_label_tableSize">Table Size</string>
    <string name="textView_label_consecutivePoint">Consecutive Point</string>
    <string name="textView_label_objective">Objective: </string>
    <string name="textView_objectiveNumber">0</string>
    <string name="textView_label_player">Player</string>

    <string-array name="tableSizes">
        <item>3x3</item>
        <item>4x4</item>
        <item>5x5</item>
        <item>6x6</item>
        <item>7x7</item>
        <item>8x8</item>
        <item>9x9</item>
        <item>10x10</item>
    </string-array>

    <string-array name="consecutivePoints">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>